--- a/view/adminhtml/templates/wysiwyg/js.phtml
+++ b/view/adminhtml/templates/wysiwyg/js.phtml
@@ -10,7 +10,7 @@
 <script>
 require([
     "jquery",
-    "tinymce",
+    "wysiwygAdapter",
     "prototype",
     "mage/adminhtml/events"
 ], function(jQuery, tinyMCE){
